[tool.poetry]
name = "pubmed_papers"
version = "0.1.0"
description = "Fetch and filter PubMed research papers."
authors = ["Your Name"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
typer = {extras = ["all"], version = "^0.9.0"}
pandas = "^1.3.0"


[tool.poetry.scripts]
get-papers-list = "cli:get_papers_list"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


